--- a/contact.html
+++ b/contact.html
@@ -17,18 +17,8 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <section class="main">
-      <div class="main-heading">
-        <h1 class="main-heading-header" id="fade"></h1>
-      </div>
-    </section>
-    <section class="about">
-      <div class="about-heading">
-        <h1 class="about-heading-header">
-          Come find yourself
-        </h1>
-      </div>
-    </section>
+
+    <section class="contact-form"></section>
 
     <script src="js/main.js"></script>
   </body>
